--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/mkkakau/cat-clicker-premium#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-clean": "^0.3.2"
+    "gulp-clean": "^0.3.2",
+    "gulp-gh-pages": "^0.5.4"
   }
 }
