--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
+    "gulp-deploy-git": "^0.5.3",
     "gulp-gh-pages": "^0.5.4"
   }
 }
